--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "formidable": "1.0.x"
+	"node": "0.10.x"
+    "formidable": "1.2.x"
   }
 }
